updated in several queries

--- a/dqe_python_pandas_task1_aliaksandr_shkuratau.ipynb
+++ b/dqe_python_pandas_task1_aliaksandr_shkuratau.ipynb
@@ -32,26 +32,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Change the path to the dataset file if needed. \n",
-    "PATH = 'athlete_events.csv'"
+    "PATH = '{}\\\\athlete_events.csv'.format(os.getcwd())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +211,7 @@
        "4  Speed Skating Women's 500 metres   NaN  "
       ]
      },
-     "execution_count": 146,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -305,19 +306,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 16,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1988 Olympics,female tennis players: mean heght:171.1cm, max heght:190.0cm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# You code here\n",
     "femtenn1988 = data[(data['Year']==1988) & (data['Sex']=='F') & (data['Sport']=='Tennis') ].drop_duplicates(subset=['ID'])"
@@ -325,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -351,25 +344,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "# You code here\n",
-    "heaviest = data[(data['Year']==1988)].nlargest(n=1, columns=['Weight'])\n",
-    "#print(heaviest)"
+    "heaviest = data[(data['Year']==1988)].nlargest(n=1, columns=['Weight'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Answer: sport of the heaviest athlete among 1988 Olympics participants is Weightlifting\n"
+      "Answer: sport of the heaviest athlete among 1988 Olympics is Weightlifting\n"
      ]
     }
    ],
@@ -386,32 +378,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "# You code here\n",
     "aalbergcnt = len(data[(data['Name']=='John Aalberg')]['Year'].drop_duplicates())\n",
-    "aalberg_opt2 = data[(data['Name']=='John Aalberg')]['Year']"
+    "#aalberg_opt2 = data[(data['Name']=='John Aalberg')]['Year']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Answer: John Aalberg participated in 2 Olympic games\n",
-      "Answer option 2: John Aalberg participated 8 time(s) in 2 Olympic games\n"
+      "Answer: John Aalberg participated in 2 Olympic games\n"
      ]
     }
    ],
    "source": [
     "print('Answer: John Aalberg participated in {} Olympic games'.format(aalbergcnt))\n",
-    "print('Answer option 2: John Aalberg participated {} time(s) in {} Olympic games'.format(len(aalberg_opt2),len(aalberg_opt2.drop_duplicates())))"
+    "#print('Answer option 2: John Aalberg participated {} time(s) in {} Olympic games'.format(len(aalberg_opt2),len(aalberg_opt2.drop_duplicates())))"
    ]
   },
   {
@@ -457,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -492,13 +483,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
     "# You code here\n",
-    "spain_medals = len(data[(data['Year']==2016) & (data['NOC']=='ESP') & (data['Medal'].notna())])\n",
-    "italy_medals = len(data[(data['Year']==2016) & (data['NOC']=='ITA') & (data['Medal'].notna())])"
+    "spain_medals = data[(data['Year']==2016) & (data['NOC']=='ESP')]['Medal'].count()\n",
+    "italy_medals = data[(data['Year']==2016) & (data['NOC']=='ITA')]['Medal'].count()"
    ]
   },
   {
@@ -528,26 +519,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Absolute difference between number of sports in 1988 (37) and in 2002 (15) is 22\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# You code here\n",
-    "uniquesports1988 = len(data[(data['Year']==1988)].drop_duplicates(subset=['Sport'])['Sport'])\n",
-    "uniquesports2002 = len(data[(data['Year']==2002)].drop_duplicates(subset=['Sport'])['Sport'])"
+    "uniquesports1988 = data[(data['Year']==1988)]['Sport'].nunique()\n",
+    "uniquesports2002 = data[(data['Year']==2002)]['Sport'].nunique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
