--- a/dqe_python_pandas_task1_aliaksandr_shkuratau.ipynb
+++ b/dqe_python_pandas_task1_aliaksandr_shkuratau.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,17 +42,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Change the path to the dataset file if needed. \n",
-    "PATH = '{}\\\\athlete_events.csv'.format(os.getcwd())"
+    "file_path=\"\"\n",
+    "PATH = os.path.join(file_path,'athlete_events.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +212,7 @@
        "4  Speed Skating Women's 500 metres   NaN  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {
     "scrolled": false
    },
@@ -318,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,19 +355,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Answer: sport of the heaviest athlete among 1988 Olympics is Weightlifting\n"
+      "Answer: sport of the heaviest athlete (Ji Zubrick) among 1988 Olympics is Weightlifting\n"
      ]
     }
    ],
    "source": [
-    "print('Answer: sport of the heaviest athlete among 1988 Olympics is {}'.format(heaviest['Sport'].to_string(index=False)))"
+    "print('Answer: sport of the heaviest athlete ({}) among 1988 Olympics is {}'.format(heaviest['Name'].to_string(index=False),heaviest['Sport'].to_string(index=False)))"
    ]
   },
   {
@@ -378,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -556,31 +557,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "# You code here\n",
-    "highest_num_ofmedals = data.groupby(\"NOC\")[\"Medal\"].count()\n",
-    "cntry_with_max = highest_num_ofmedals[highest_num_ofmedals==highest_num_ofmedals.max()]"
+    "num_of_medals_per_country = data.groupby(\"NOC\")[\"Medal\"].count()\n",
+    "cntry_with_max = num_of_medals_per_country[num_of_medals_per_country==num_of_medals_per_country.max()]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Answer: highest number of medals overall\n",
+      "Answer: countries with highest number of medals overall:\n",
       "   Country: USA; count of medals: 5637\n"
      ]
     }
    ],
    "source": [
-    "print('Answer: highest number of medals overall')\n",
+    "print('Answer: countries with highest number of medals overall:')\n",
     "for k,v in cntry_with_max.items():\n",
     "    print('   Country: {}; count of medals: {}'.format(k,v))"
    ]
