minor updates (simplified) in 3-4

--- a/dqe_python_pandas_task1_aliaksandr_shkuratau.ipynb
+++ b/dqe_python_pandas_task1_aliaksandr_shkuratau.ipynb
@@ -272,18 +272,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "# You code here\n",
     "fem2012 = data[(data['Year']==2012) & (data['Sex']=='F')]\n",
-    "prcnt = round(len(fem2012[fem2012['Sport']=='Basketball'].drop_duplicates(subset=['ID']))/len(fem2012.drop_duplicates(subset=['ID']))*100,1)"
+    "prcnt = round(fem2012[fem2012['Sport']=='Basketball']['ID'].nunique()/fem2012['ID'].nunique()*100,1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +367,7 @@
     }
    ],
    "source": [
-    "print('Answer: sport of the heaviest athlete ({}) among 1988 Olympics is {}'.format(heaviest['Name'].to_string(index=False),heaviest['Sport'].to_string(index=False)))"
+    "print('Answer: sport of the heaviest athlete ({}) among 1988 Olympics is {}'.format(heaviest.iloc[0]['Name'],heaviest.iloc[0]['Sport']))"
    ]
   },
   {
